--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -2,7 +2,12 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="ProjectControl" Height="350" Width="525">
-    <Grid>
+    <DockPanel Margin="10">
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
+            <Button Content="▶" Width="50" Margin="5" Command="{Binding PlayCommand}"/>
+            <Button Content="⏸" Width="50" Margin="5" Command="{Binding PauseCommand}"/>
+            <Button Content="⏹" Width="50" Margin="5" Command="{Binding StopCommand}"/>
+        </StackPanel>
         <ListBox ItemsSource="{Binding Projects}" DisplayMemberPath="Name" />
-    </Grid>
+    </DockPanel>
 </Window>
