--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -10,6 +10,16 @@
             <Button Content="＋" Width="50" Margin="5" Click="OnAddProject"/>
             <Button Content="Заказчики" Width="80" Margin="5" Click="OnCustomers"/>
         </StackPanel>
-        <ListBox ItemsSource="{Binding Projects}" DisplayMemberPath="Name" />
+        <ListBox ItemsSource="{Binding Projects}" SelectedItem="{Binding SelectedProject}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Text="{Binding Name}" Width="150"/>
+                        <TextBlock Text="{Binding Status}" Width="80" Margin="10,0,0,0"/>
+                        <TextBlock Text="{Binding TotalTimeSpent}" Margin="10,0,0,0"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </DockPanel>
 </Window>
