--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -1,7 +1,11 @@
 <Window x:Class="ProjectControl.Desktop.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:conv="clr-namespace:ProjectControl.Desktop.Converters"
         Title="ProjectControl" Height="350" Width="525">
+    <Window.Resources>
+        <conv:TimeFormatConverter x:Key="TimeFormat" />
+    </Window.Resources>
     <DockPanel Margin="10">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Button Content="▶" Width="50" Margin="5" Command="{Binding PlayCommand}"/>
@@ -14,9 +18,10 @@
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Name}" Width="150"/>
+                        <TextBlock Text="{Binding Name}" Width="120"/>
+                        <TextBlock Text="{Binding Customer.Name}" Width="100" Margin="10,0,0,0"/>
                         <TextBlock Text="{Binding Status}" Width="80" Margin="10,0,0,0"/>
-                        <TextBlock Text="{Binding TotalTimeSpent}" Margin="10,0,0,0"/>
+                        <TextBlock Text="{Binding TotalTimeSpent, Converter={StaticResource TimeFormat}}" Margin="10,0,0,0"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
