--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -13,6 +13,7 @@
             <Button Content="⏹" Width="50" Margin="5" Command="{Binding StopCommand}"/>
             <Button Content="＋" Width="50" Margin="5" Click="OnAddProject"/>
             <Button Content="Заказчики" Width="80" Margin="5" Click="OnCustomers"/>
+            <Button Content="Аналитика" Width="80" Margin="5" Click="OnAnalytics"/>
         </StackPanel>
         <ListBox ItemsSource="{Binding Projects}" SelectedItem="{Binding SelectedProject}">
             <ListBox.ItemTemplate>
