--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -7,6 +7,13 @@
         <conv:TimeFormatConverter x:Key="TimeFormat" />
     </Window.Resources>
     <DockPanel Margin="10">
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+            <TextBox Width="150" Margin="0,0,10,0" TextChanged="OnFilterChanged" />
+            <ComboBox Width="120" SelectionChanged="OnSortChanged">
+                <ComboBoxItem Content="По имени" IsSelected="True"/>
+                <ComboBoxItem Content="По времени"/>
+            </ComboBox>
+        </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10,0,0">
             <Button Content="▶" Width="50" Margin="5" Command="{Binding PlayCommand}"/>
             <Button Content="⏸" Width="50" Margin="5" Command="{Binding PauseCommand}"/>
@@ -15,7 +22,7 @@
             <Button Content="Заказчики" Width="80" Margin="5" Click="OnCustomers"/>
             <Button Content="Аналитика" Width="80" Margin="5" Click="OnAnalytics"/>
         </StackPanel>
-        <ListBox ItemsSource="{Binding Projects}" SelectedItem="{Binding SelectedProject}">
+        <ListBox ItemsSource="{Binding FilteredProjects}" SelectedItem="{Binding SelectedProject}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
