--- a/ProjectControl.Desktop/Views/CustomerListWindow.xaml
+++ b/ProjectControl.Desktop/Views/CustomerListWindow.xaml
@@ -3,7 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Заказчики" Height="300" Width="400">
     <DockPanel Margin="10">
-        <Button DockPanel.Dock="Bottom" Content="Новый" Width="80" Margin="0,10,0,0" Command="{Binding NewCustomerCommand}"/>
-        <ListBox ItemsSource="{Binding Customers}" DisplayMemberPath="Name"/>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" Margin="0,10,0,0">
+            <Button Content="Новый" Width="80" Margin="0,0,10,0" Command="{Binding NewCustomerCommand}"/>
+            <Button Content="Изменить" Width="80" Margin="0,0,10,0" Command="{Binding EditCustomerCommand}"/>
+            <Button Content="Удалить" Width="80" Command="{Binding DeleteCustomerCommand}"/>
+        </StackPanel>
+        <ListBox ItemsSource="{Binding Customers}" SelectedItem="{Binding SelectedCustomer}" DisplayMemberPath="Name"/>
     </DockPanel>
 </Window>
