--- a/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
+++ b/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
@@ -16,7 +16,13 @@
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Проект" DisplayMemberBinding="{Binding Name}" Width="120"/>
-                    <GridViewColumn Header="Заказчик" DisplayMemberBinding="{Binding Customer.Name}" Width="100"/>
+                    <GridViewColumn Header="Заказчик" Width="100">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Customer.Name}" />
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="Время" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
