--- a/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
+++ b/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
@@ -7,6 +7,9 @@
         <conv:TimeFormatConverter x:Key="TimeFormat" />
     </Window.Resources>
     <DockPanel Margin="10">
+        <StackPanel Orientation="Horizontal" Margin="0,0,0,10">
+            <CheckBox Content="Только завершённые" IsChecked="{Binding CompletedOnly}" Checked="OnFilterChanged" Unchecked="OnFilterChanged"/>
+        </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
             <Button Content="Экспорт CSV" Width="100" Margin="0,0,10,0" Click="OnExportCsv"/>
             <TextBlock VerticalAlignment="Center"
@@ -23,6 +26,7 @@
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
+                    <GridViewColumn Header="Статус" DisplayMemberBinding="{Binding Status}" Width="100"/>
                     <GridViewColumn Header="Время" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
