--- a/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
+++ b/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
@@ -19,13 +19,7 @@
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Проект" DisplayMemberBinding="{Binding Name}" Width="120"/>
-                    <GridViewColumn Header="Заказчик" Width="100">
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="{Binding Customer.Name}" />
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
+                    <GridViewColumn Header="Заказчик" DisplayMemberBinding="{Binding Customer.Name}" Width="120" />
                     <GridViewColumn Header="Статус" DisplayMemberBinding="{Binding Status}" Width="100"/>
                     <GridViewColumn Header="Время" Width="80">
                         <GridViewColumn.CellTemplate>
