--- a/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
+++ b/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
@@ -12,6 +12,8 @@
         </StackPanel>
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
             <Button Content="Экспорт CSV" Width="100" Margin="0,0,10,0" Click="OnExportCsv"/>
+            <TextBlock VerticalAlignment="Center" Margin="0,0,10,0"
+                       Text="{Binding TotalPayment, StringFormat={}{0:C}}" />
             <TextBlock VerticalAlignment="Center"
                        Text="{Binding TotalTimeSpent, Converter={StaticResource TimeFormat}}" />
         </StackPanel>
@@ -27,6 +29,13 @@
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                     <GridViewColumn Header="Статус" DisplayMemberBinding="{Binding Status}" Width="100"/>
+                    <GridViewColumn Header="Оплата" Width="80">
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding PaymentAmount, StringFormat={}{0:C}}"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
                     <GridViewColumn Header="Время" Width="80">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
