--- a/ProjectControl.Desktop/MainWindow.xaml
+++ b/ProjectControl.Desktop/MainWindow.xaml
@@ -2,7 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:conv="clr-namespace:ProjectControl.Desktop.Converters"
-        Title="ProjectControl" Height="350" Width="525">
+        Title="ProjectControl"
+        Height="500"
+        Width="1500"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <conv:TimeFormatConverter x:Key="TimeFormat" />
         <conv:RunningTimeConverter x:Key="RunningTime" />
