--- a/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
+++ b/ProjectControl.Desktop/Views/AnalyticsWindow.xaml
@@ -2,12 +2,15 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:conv="clr-namespace:ProjectControl.Desktop.Converters"
-        Title="Аналитика" Height="300" Width="400">
+        Title="Аналитика"
+        Height="500"
+        Width="1500"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <conv:TimeFormatConverter x:Key="TimeFormat" />
     </Window.Resources>
     <DockPanel Margin="10">
-        <StackPanel Orientation="Horizontal" Margin="0,0,0,10" VerticalAlignment="Top">
+        <StackPanel Orientation="Vertical" Margin="0,0,0,10" VerticalAlignment="Top">
             <CheckBox Content="Только завершённые" IsChecked="{Binding CompletedOnly}" Margin="0,0,10,0" Checked="OnFilterChanged" Unchecked="OnFilterChanged"/>
             <TextBlock Text="От" VerticalAlignment="Center"/>
             <DatePicker SelectedDate="{Binding FromDate}" Margin="5,0" Width="110"/>
