--- a/ProjectControl.Desktop/Views/CustomerEditorWindow.xaml
+++ b/ProjectControl.Desktop/Views/CustomerEditorWindow.xaml
@@ -1,7 +1,8 @@
 <Window x:Class="ProjectControl.Desktop.Views.CustomerEditorWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Заказчик" Height="300" Width="400">
+        Title="Заказчик" Height="300" Width="400"
+        WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
