--- a/ProjectControl.Desktop/Views/CustomerListWindow.xaml
+++ b/ProjectControl.Desktop/Views/CustomerListWindow.xaml
@@ -1,7 +1,8 @@
 <Window x:Class="ProjectControl.Desktop.Views.CustomerListWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Заказчики" Height="300" Width="400">
+        Title="Заказчики" Height="300" Width="400"
+        WindowStartupLocation="CenterScreen">
     <DockPanel Margin="10">
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
             <Button Content="Удалить" Width="80" Margin="0,0,10,0" Command="{Binding DeleteCustomerCommand}"/>
