--- a/ProjectControl.Desktop/Views/PaymentWindow.xaml
+++ b/ProjectControl.Desktop/Views/PaymentWindow.xaml
@@ -1,7 +1,8 @@
 <Window x:Class="ProjectControl.Desktop.Views.PaymentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Оплата" Height="150" Width="250">
+        Title="Оплата" Height="150" Width="250"
+        WindowStartupLocation="CenterScreen">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
