--- a/ProjectControl.Desktop/Themes/LightTheme.xaml
+++ b/ProjectControl.Desktop/Themes/LightTheme.xaml
@@ -1,16 +1,52 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell"
+                    xmlns:scm="clr-namespace:System.Windows;assembly=PresentationFramework">
     <Color x:Key="PrimaryBackgroundColor">#FFF7F7F7</Color>
     <Color x:Key="PrimaryForegroundColor">#FF000000</Color>
     <Color x:Key="AccentColor">#FFB0C4DE</Color>
+    <Color x:Key="WindowTitleBackgroundColor">#FFE0E0E0</Color>
 
     <SolidColorBrush x:Key="PrimaryBackground" Color="{StaticResource PrimaryBackgroundColor}"/>
     <SolidColorBrush x:Key="PrimaryForeground" Color="{StaticResource PrimaryForegroundColor}"/>
     <SolidColorBrush x:Key="AccentBrush" Color="{StaticResource AccentColor}"/>
+    <SolidColorBrush x:Key="WindowTitleBackground" Color="{StaticResource WindowTitleBackgroundColor}"/>
+
+    <Style TargetType="Panel">
+        <Setter Property="Background" Value="{DynamicResource PrimaryBackground}"/>
+    </Style>
 
     <Style TargetType="Window">
         <Setter Property="Background" Value="{DynamicResource PrimaryBackground}"/>
         <Setter Property="Foreground" Value="{DynamicResource PrimaryForeground}"/>
+        <Setter Property="WindowStyle" Value="None"/>
+        <Setter Property="ResizeMode" Value="CanResize"/>
+        <Setter Property="shell:WindowChrome.WindowChrome">
+            <Setter.Value>
+                <shell:WindowChrome CornerRadius="0" CaptionHeight="30" GlassFrameThickness="0" ResizeBorderThickness="5"/>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Window" xmlns:shell="http://schemas.microsoft.com/winfx/2006/xaml/presentation/shell" xmlns:scm="clr-namespace:System.Windows;assembly=PresentationFramework">
+                    <Border BorderBrush="{DynamicResource AccentBrush}" BorderThickness="1">
+                        <DockPanel>
+                            <DockPanel x:Name="PART_TitleBar" Background="{DynamicResource WindowTitleBackground}" Height="30" DockPanel.Dock="Top" shell:WindowChrome.IsHitTestVisibleInChrome="True">
+                                <TextBlock Text="{TemplateBinding Title}" VerticalAlignment="Center" Margin="10,0"/>
+                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                                    <Button Command="{x:Static scm:SystemCommands.MinimizeWindowCommand}" CommandTarget="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Content="_" Width="30" Height="30" Background="{DynamicResource WindowTitleBackground}" BorderThickness="0"/>
+                                    <Button Command="{x:Static scm:SystemCommands.MaximizeWindowCommand}" CommandTarget="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Content="□" Width="30" Height="30" Background="{DynamicResource WindowTitleBackground}" BorderThickness="0"/>
+                                    <Button Command="{x:Static scm:SystemCommands.CloseWindowCommand}" CommandTarget="{Binding RelativeSource={RelativeSource AncestorType=Window}}" Content="✕" Width="30" Height="30" Background="{DynamicResource WindowTitleBackground}" BorderThickness="0"/>
+                                </StackPanel>
+                            </DockPanel>
+                            <AdornerDecorator>
+                                <ContentPresenter/>
+                            </AdornerDecorator>
+                        </DockPanel>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 
     <Style TargetType="Button">
